# redmoon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: SDL3 Music Visualizer App Requirements.md
htap/: CMakeLists.txt  htap.cpp  htap.hpp
redmoon/: .gitignore  CMakeLists.txt
src/: entrypoint.cpp  main.cpp
src/assetManager/: asset.h  assetManager.cpp  assetManager.h  assetManagerBase.h  assetMatadata.h
src/core/: UUID.cpp  UUID.h  application.cpp  application.h  audioPlayer.h
src/renderer/: renderer.cpp  renderer.h  shader.cpp  shader.h  shaderLibrary.cpp  shaderLibrary.h  texture.h
src/utils/: base.h  sdlUtils.cpp  sdlUtils.h
